2010-07-30  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in (libgnomeui_LIBS): 
	check for gtk-config
        try our best to look for gnome.h file

	* pnee/src/pnee_impl.h: 
	Removed inclusion of gnome.h

2010-06-17  Henrik Sandklef  <hesa@haas.sandklef.com>

	* doc/Makefile.am (install): 
	Installation of docs is now depending on BUILDOC

	* configure.in: 
	Added new option: --enable-man
	Checks for makeinfo once, uses result many times
	Can build guis and manual without all doc stuff

2010-05-27  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_record.c: 
	Removed debug/printf printout when closing context

	* libxnee/src/xnee_session.c: 
	Re-enabling closing of displays

	* cnee/src/main.c (main): 
	Removing set_verbose in main (huah!!)

	* libxnee/src/xnee_keysym.c (xnee_token_to_km): 
	Checking if keycode/modifier is valid before using it

2010-05-26  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	Bumping version to 3.06

	* libxnee/src/xnee_resource.c: 
	Replace "forced-reparent-recording" with
	"no-reparent-recording"
	
	* libxnee/src/xnee_record.c (xnee_record_handle_event_printer): 
	Don't print reparent event if no-reparent

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	If no-reparent-recording used, print option to file

	* libxnee/src/xnee_session.c (xnee_init): 
	no-reparent turned OFF default

	* libxnee/src/xnee_setget.c (xnee_set_no_reparent_recording): 
	set, get and is functions for no-reparent functionality

	* libxnee/include/libxnee/xnee_resource.h (enum XNEE_OPTION_KEYS): 
	Replace XNEE_FORCED_REPARENT_RECORD with
	        XNEE_NO_REPARENT_RECORD		

	* libxnee/include/libxnee/xnee.h (struct): 
	forced_reparent_recording turned into no_reparent_recording 

2010-05-12  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_fileop.c (xnee_free_file): 
	Checking if file is null before printing (only debug print)

	* libxnee/src/xnee_utils.c (xnee_record_from_data_display): 